--- a/app/globals.css
+++ b/app/globals.css
@@ -33,3 +33,21 @@
     overflow-x: scroll;
     overflow-y: hidden;
 }
+
+.item-enter {
+    opacity: 0;
+}
+
+.item-enter-active {
+    opacity: 1;
+    transition: opacity 500ms ease-in-out;
+}
+
+.item-exit {
+    opacity: 1;
+}
+
+.item-exit-active {
+    opacity: 0;
+    transition: opacity 500ms ease-in-out;
+}
